--- a/code/012_MA_MD.Rmd
+++ b/code/012_MA_MD.Rmd
@@ -41,13 +41,15 @@ exp_sub_mods_md2 <- exp_sub_mods_md %>%
       TRUE ~ Treatment_N
     ),
     
-    study_label = paste(id, model_id, sep = '_')
+    study_label = paste(id, model_id, sep = '_'),
+    
   ) %>%
 
   ## convert SE, and CI to `SD`
   func_for_sd(data = .) %>%
   
   ## within group vs. between group 
+  dplyr::mutate(subgroup_design = stringr::str_extract(string=subgroup_other_o2, pattern = "\\d{1}ba") ) %>%
   
   ## remove row without any data from table option 2
   dplyr::filter(!is.na(c_mean) & !is.na(e_mean) & !is.na(MH_indicator_o2)) %>%
@@ -91,6 +93,8 @@ library(grid)
 # Use metcont to pool results.
 
 show_raw_data_in_forest <- F
+add_subgroup_analysis   <- T
+
 
 for (sub_ind_i in sub_indicator_selected) {
   
@@ -114,7 +118,7 @@ for (sub_ind_i in sub_indicator_selected) {
                      random = TRUE,
                      method.tau = "REML",
                      hakn = TRUE,
-                     # byvar = NULL, ## Grouping results by a variable 
+                     byvar = subgroup_design,  ## Grouping results by a variable, default = NULL
                      title = mh_tool)
   ma_smd
   
@@ -127,15 +131,25 @@ for (sub_ind_i in sub_indicator_selected) {
     leftcols_show = c("studlab", "n.e", "mean.e", "sd.e", "n.c", "mean.c", "sd.c")
     add_print.tau2 = T
     width_plot = 27.5
-    plotname_postfix = ''
+    postfix_simplify = ''
   } else {
     leftcols_show = c("studlab")
     add_print.tau2 = F ## limited space causes text overlap
     width_plot = 18.5
-    plotname_postfix = 'simplified'
+    postfix_simplify = 'simplified'
   }
   
-  f <- paste0('./figures/', 'plot_forest_', mh_tool, '_', sub_ind_i, '_', today, plotname_postfix, '.png'); f
+  if (add_subgroup_analysis == T) {
+    postfix_subgroup <- "subgroup"
+    height_cm <- height_cm + 10
+  } else {
+    postfix_subgroup <- ""
+  }
+  
+  f <- paste0('./figures/', 'plot_forest_', mh_tool, '_', sub_ind_i, '_', today, 
+              postfix_simplify, '_',
+              postfix_subgroup, 
+              '.png'); f
   png(filename = f, 
       # width = 3000, height = 3000, units = "px", pointsize = 22,
       width = width_plot, height = height_cm/1.5, units = "cm", res = 100)
@@ -154,9 +168,10 @@ for (sub_ind_i in sub_indicator_selected) {
          
          # xlim = 's', # “s” to produce symmetric forest plots
          
-         # print.byvar = FALSE,
+         # print.byvar = FALSE, ## whether the name of the grouping variable should be printed in front of the group labels.
          # label.left = "loss",
          # label.right = "gain",
+         digits=2,
          digits.sd = 2,
          digits.tau2 = 2,
          colgap = "0.4cm",
